Change pre-wrap to pre to fix code from wrapping.

--- a/css/main.css
+++ b/css/main.css
@@ -667,7 +667,7 @@ table tr td :last-child {
 pre {
   font-size: 16px;
   line-height: 1.5em;
-  white-space: pre-wrap;
+  white-space: pre;
 }
 .highlight pre {
   border: none;
